# despot_tutorials

examples/search/: CMakeLists.txt  package.xml
examples/search/action/: TrackObs.action
examples/search/include/: search.h
examples/search/include/pomdp_planner/: search_world.h
examples/search/include/robot_controller/: tiger_controller.h
examples/search/launch/: hsrb_active.launch
examples/search/scripts/: hsrb_interface.py
examples/search/src/: main.cpp  search.cpp  search_world.cpp
examples/search/src/pomdp_planner/: search_world.cpp
examples/search/src/robot_controller/: tiger_controller.cpp
examples/tiger/: CMakeLists.txt  package.xml
examples/tiger/action/: TrackObs.action
examples/tiger/include/pomdp_planner/: tiger.h  tiger_oldh  tiger_world.h
examples/tiger/scripts/: hsrb_interface.py
examples/tiger/src/pomdp_planner/: main.cpp  tiger.cpp  tiger_oldcpp  tiger_world.cpp
examples/tiger/src/robot_controller/: hsrb_interface.cpp
